# bot

./: alembic.ini  docker-compose.yml  pyproject.toml
app/: container.py  main.py  settings.py
app/bot/: adapter.py  port.py
app/bot/filters/: is_admin.py  is_driver.py
app/bot/handlers/: admin.py  driver.py  passenger.py
app/bot/keyboards/: keyboards.py
app/bot/middlewares/: auth.py  di.py
app/migrations/: env.py
app/migrations/versions/: 19b82ef058f4_.py  315cb911553d_.py  5b9e75ce3a1e_.py  941cf0b00f18_.py  967184a8d04e_.py
app/models/: base.py  ride.py  stop.py  ticket.py  user.py
app/repositories/: ride.py  stop.py  ticket.py  user.py
app/services/: __init__.py  location.py  ride.py  stop.py  ticket.py  timer.py  user.py
